2000-05-09  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* router/rfc822.c:
	    Existence of ZENV variable ``SCHEDULERDIRHASH'' drives
	    movement of files from router to the scheduler to go
	    straight to hashed subdirs at the scheduler.

	* router/daemonsub.c:
	    A lot more work at the daemon subsystem.
	    Now it runs a dedicated set of router processes for
	    the primary router directory, plus one for each of
	    ``ROUTERDIRS'' variable defined auxiliary directories.

	* libc/mail.c, router/daemonsub.c, man/router.8,
	  SiteConfig.in:
	    If ZENV variable ``ROUTERDIRHASH'' exists, and has value
	    ``1'', all message submissions will be using direct moving
	    nto ``A'' thru ``Z'' hash-subdirectories -- if they don't
	    exist, things FAIL!

	* scheduler/mq2auth.c, scheduler/transport.c:
	    Mailq-V2 IP-ACL system works!

	* scheduler/scheduler.c, scheduler/transports.c:
	    Call  syncweb()  also inside the   mux()  routine
	    so that new jobs will get assimilated faster.

2000-05-08  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* libc/mail.c, router/rfc822.c:
	    Simplified message injection code a bit; especially
	    tried to lessen the number of directory operations.
	    (Even though comments in the source say that rename(2)
	     isn't safe, we are using it...)

	* INSTALL:
	    Refer to HTML renderation of ZMailer manual's install part..

	* scheduler/msgerror.c:
	    Drop leading \r from report data.  No weird looking blank
	    line in resulting report.

	* transports/smtp/smtp.c:
	    Don't diagnose TLS status unconditionally, it is annoying
	    thing to have accumulating into scheduler's log..

	* smtpserver/smtpserver.c:
	    When --with-whoson  is used at configuration, and
	    smtpserver is run without '-w' option, policy test
	    is falling on default of "yes this is always ok relay
	    source" behaviour -- which in general is wrong :-(

2000-05-04  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* lib/selfaddrs.c: